# Xmini

./: .gitignore  AUTHORS  Makefile.am  README  autogen.sh  configure.ac
src/: Makefile.am  Xmini.c  Xmini.h
